# Reminders

./: README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cypress-e2e.yml  deploy-pages.yml  dotnet-code-coverage.yml  dotnet-pull-request.yml
.synth-dev/knowledge/: architecture.md  gotchas.md  modules.md  patterns.md  testing.md
blockchain/: package-lock.json  package.json
infrastructure/: nginx.conf
src/app/dotnet/Reminders.Mvc/: Reminders.Mvc.csproj
src/app/dotnet/Reminders.Mvc/Views/Shared/: _Layout.cshtml
src/app/reactjs/reminders-app/: next.config.js  package-lock.json  package.json
src/app/reactjs/reminders-app/src/app/reminder/[id]/: page.tsx
src/server/api/cpp/reminders-api/: CMakeLists.txt  Dockerfile  wait-for-dotnet.sh
src/server/api/cpp/reminders-api/src/: handler.cpp  handler.h  main.cpp  model.h  repository.cpp  repository.h
src/server/api/dotnet/Reminders.Api/: Reminders.Api.csproj
src/test/app/dotnet/Reminders.Mvc.Test/: Reminders.Mvc.Test.csproj
src/test/cypress/: cypress.config.js  package-lock.json
src/test/server/dotnet/Reminders.Api.Test/: Reminders.Api.Test.csproj
src/test/server/dotnet/Reminders.Application.Test/: Reminders.Application.Test.csproj
